--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <ul class="nav navbar-nav">
                     <li><a href="#/manufacturers">Manufacturers</a></li>
                     <li><a href="#/cars">All cars</a></li>
-                    <li><a ng-click="mapDialog('lg')">Dealer map</a></li>
+                    <li><a ng-click="mapDialog('lg')" href="">Car location map</a></li>
                 </ul>
                 <div class="nav navbar-nav navbar-right">
                     <ul class="nav navbar-nav">
                         <li><a href="#/add-manufacturer">Add Manufacturer</a></li>
                         <li><a href="#/add-car">Add Car</a></li>
-                        <li><a href="javascript:;" ng-click="loginDialog('lg')">Login</a></li>
+<!--                        <li><a href="javascript:;" ng-click="loginDialog('lg')">Login</a></li>-->
                     </ul>
                 </div>
             </div>
@@ -66,6 +66,6 @@
     <script src="js/controllers/ManufacturersController.js"></script>
     <script src="js/controllers/AddCarController.js"></script>
     <script src="js/controllers/AddManufacturerController.js"></script>
-    <script src="js/controllers/Dealers.js"></script>
+    <script src="js/controllers/ManufacturersMapCtrl.js"></script>
 </body>
 </html>
